# penelope

./: Cargo.toml  README.md  install.sh  penelope.toml
.github/workflows/: release.yml
crates/penelope-cli/: Cargo.toml
crates/penelope-cli/src/: audit.rs  config.rs  exec.rs  hook.rs  install.rs  learner.rs  main.rs  normalize.rs  pipeline.rs  register.rs  remote.rs  session.rs  shell.rs  tier2.rs
crates/penelope-rules/: Cargo.toml
crates/penelope-rules/src/: builtins.rs  engine.rs  lib.rs  rules.rs
scripts/: fetch_typesafe_key.py  generate_banner.py
